src/styles/taskbar.css
.taskbar {
  position: fixed;
  bottom: 0;
  width: 100%;
  height: 40px;
  background-color: #006abe;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0;
  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.3);
}

.taskbar-start {
  display: flex;
  align-items: center;
  background: radial-gradient(circle, #55b14c, #2a6f3d);
  height: 100%;
  border-radius: 0px 10px 10px 0px;
}

.start-button {
  display: flex;
  gap: 10px;
  background-color: transparent;
  color: white;
  border: none;
  padding: 5px 10px;
  cursor: pointer;
  font-size: 16px;
  text-shadow: #000 4px 2px 10px;
  font-size: 1.2em;
  padding-right: 25px;
}

.taskbar-icons {
  display: flex;
  align-items: center; /* Center icons vertically */
  height: 100%;
}

.taskbar-clock {
  margin-left: auto; /* Pushes clock to the right */
  color: white;
  font-size: 14px;
  margin-right: 20px;
  cursor: default;
  line-height: normal;
}

.windows-logo-taskbar {
  width: 1.8em;
  height: 1.4em;
}

.taskbar-icons > .icon{
  height: 100%;
  width: 30px;
  /* margin-left: 10px; */
  padding: 0px 10px 0px 10px;
}

.taskbar-icons > .icon:hover{
  background: #ffffff33;
}
.taskbar-icons > .icon > img{
  height: 30px;
  width: 30px;
}

.taskbar-icons > .icon > span{
  display: none;
}

